// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/PipelineConfiguration/Drawer/PipelineDetailDrawer render init snap 1`] = `
<body>
  <div>
    <section
      class="css-1asj2n9"
    >
      <div
        class="ant-drawer ant-drawer-right ant-drawer-open"
        tabindex="-1"
      >
        <div
          class="ant-drawer-mask"
        />
        <div
          aria-hidden="true"
          data-sentinel="start"
          style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
          tabindex="0"
        />
        <div
          class="ant-drawer-content-wrapper"
          style="width: 720px;"
        >
          <div
            aria-modal="true"
            class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
            role="dialog"
          >
            <div
              class="ant-drawer-wrapper-body"
            >
              <div
                class="ant-drawer-header"
              >
                <div
                  class="ant-drawer-header-title"
                >
                  <div
                    class="ant-drawer-title"
                  >
                    流水线详情
                  </div>
                </div>
                <div
                  class="ant-drawer-extra"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <button
                        class="ant-btn ant-btn-default ant-btn-dangerous basic-button-wrapper css-1uxy5k6"
                        type="button"
                      >
                        <span>
                          删 除
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-primary basic-button-wrapper css-1uxy5k6"
                        type="button"
                      >
                        <span>
                          编 辑
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-drawer-body"
              >
                <div
                  class="closed-icon-custom"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    data-testid="basic-drawer-close-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <form
                      class="ant-form ant-form-vertical"
                    >
                      <div
                        class="ant-form-item css-1jlm9cy"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class=""
                              title="流水线名称"
                            >
                              流水线名称
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-typography ant-typography-secondary"
                                >
                                  pipeline1
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item css-1jlm9cy"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class=""
                              title="流水线描述"
                            >
                              流水线描述
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-typography ant-typography-secondary"
                                >
                                  desc
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item css-1jlm9cy"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class=""
                              title="流水线地址"
                            >
                              流水线地址
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-typography ant-typography-secondary"
                                >
                                  <a
                                    class="ant-typography"
                                    href="127.0.0.1"
                                    rel="noopener noreferrer"
                                    target="_blank"
                                  >
                                    127.0.0.1
                                  </a>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item css-1jlm9cy"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class=""
                              title="流水线节点"
                            >
                              流水线节点
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <section
                                  class="node-list"
                                >
                                  <div
                                    class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
                                  >
                                    <div
                                      class="ant-spin-nested-loading"
                                    >
                                      <div
                                        class="ant-spin-container"
                                      >
                                        <div
                                          class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                                        >
                                          <div
                                            class="ant-table-container"
                                          >
                                            <div
                                              class="ant-table-content"
                                              style="overflow-x: auto; overflow-y: hidden;"
                                            >
                                              <table
                                                style="min-width: 100%; table-layout: auto;"
                                              >
                                                <colgroup>
                                                  <col />
                                                  <col />
                                                  <col />
                                                  <col />
                                                  <col
                                                    style="width: 82px;"
                                                  />
                                                </colgroup>
                                                <thead
                                                  class="ant-table-thead"
                                                >
                                                  <tr>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      节点名称
                                                    </th>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      节点类型
                                                    </th>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      审核规则模板
                                                    </th>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      对接说明
                                                    </th>
                                                    <th
                                                      class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                                      scope="col"
                                                      style="position: sticky; right: 0px;"
                                                    >
                                                      操作
                                                    </th>
                                                  </tr>
                                                </thead>
                                                <tbody
                                                  class="ant-table-tbody"
                                                >
                                                  <tr
                                                    aria-hidden="true"
                                                    class="ant-table-measure-row"
                                                    style="height: 0px; font-size: 0px;"
                                                  >
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                  </tr>
                                                  <tr
                                                    class="ant-table-row ant-table-row-level-0"
                                                    data-row-key="1"
                                                  >
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      node1
                                                    </td>
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      审核
                                                    </td>
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      default_MySQL1
                                                    </td>
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      <div
                                                        class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                                                      >
                                                        <div
                                                          class="ant-space-item"
                                                        >
                                                          <a
                                                            class="ant-typography"
                                                          >
                                                            查看
                                                          </a>
                                                        </div>
                                                      </div>
                                                    </td>
                                                    <td
                                                      class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                                      style="position: sticky; right: 0px;"
                                                    >
                                                      <div
                                                        class="css-new95e"
                                                      >
                                                        <button
                                                          class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1uxy5k6"
                                                          type="button"
                                                        >
                                                          <span>
                                                            重置Token
                                                          </span>
                                                        </button>
                                                      </div>
                                                    </td>
                                                  </tr>
                                                </tbody>
                                              </table>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </section>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          data-sentinel="end"
          style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
          tabindex="0"
        />
      </div>
    </section>
  </div>
</body>
`;

exports[`sqle/PipelineConfiguration/Drawer/PipelineDetailDrawer render show tour 1`] = `
<body>
  <div>
    <section
      class="focus-node-list css-1asj2n9"
    >
      <div
        class="ant-drawer ant-drawer-right ant-drawer-open"
        tabindex="-1"
      >
        <div
          class="ant-drawer-mask"
        />
        <div
          aria-hidden="true"
          data-sentinel="start"
          style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
          tabindex="0"
        />
        <div
          class="ant-drawer-content-wrapper"
          style="width: 720px;"
        >
          <div
            aria-modal="true"
            class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
            role="dialog"
          >
            <div
              class="ant-drawer-wrapper-body"
            >
              <div
                class="ant-drawer-header"
              >
                <div
                  class="ant-drawer-header-title"
                >
                  <div
                    class="ant-drawer-title"
                  >
                    流水线详情
                  </div>
                </div>
                <div
                  class="ant-drawer-extra"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <button
                        class="ant-btn ant-btn-default ant-btn-dangerous basic-button-wrapper css-1uxy5k6"
                        type="button"
                      >
                        <span>
                          删 除
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-primary basic-button-wrapper css-1uxy5k6"
                        type="button"
                      >
                        <span>
                          编 辑
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-drawer-body"
              >
                <div
                  class="closed-icon-custom"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    data-testid="basic-drawer-close-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <form
                      class="ant-form ant-form-vertical"
                    >
                      <div
                        class="ant-form-item css-1jlm9cy"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class=""
                              title="流水线名称"
                            >
                              流水线名称
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-typography ant-typography-secondary"
                                >
                                  pipeline1
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item css-1jlm9cy"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class=""
                              title="流水线描述"
                            >
                              流水线描述
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-typography ant-typography-secondary"
                                >
                                  desc
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item css-1jlm9cy"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class=""
                              title="流水线地址"
                            >
                              流水线地址
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-typography ant-typography-secondary"
                                >
                                  <a
                                    class="ant-typography"
                                    href="127.0.0.1"
                                    rel="noopener noreferrer"
                                    target="_blank"
                                  >
                                    127.0.0.1
                                  </a>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item css-1jlm9cy"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class=""
                              title="流水线节点"
                            >
                              流水线节点
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <section
                                  class="node-list"
                                >
                                  <div
                                    class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
                                  >
                                    <div
                                      class="ant-spin-nested-loading"
                                    >
                                      <div
                                        class="ant-spin-container"
                                      >
                                        <div
                                          class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                                        >
                                          <div
                                            class="ant-table-container"
                                          >
                                            <div
                                              class="ant-table-content"
                                              style="overflow-x: auto; overflow-y: hidden;"
                                            >
                                              <table
                                                style="min-width: 100%; table-layout: auto;"
                                              >
                                                <colgroup>
                                                  <col />
                                                  <col />
                                                  <col />
                                                  <col />
                                                  <col
                                                    style="width: 82px;"
                                                  />
                                                </colgroup>
                                                <thead
                                                  class="ant-table-thead"
                                                >
                                                  <tr>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      节点名称
                                                    </th>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      节点类型
                                                    </th>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      审核规则模板
                                                    </th>
                                                    <th
                                                      class="ant-table-cell"
                                                      scope="col"
                                                    >
                                                      对接说明
                                                    </th>
                                                    <th
                                                      class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                                      scope="col"
                                                      style="position: sticky; right: 0px;"
                                                    >
                                                      操作
                                                    </th>
                                                  </tr>
                                                </thead>
                                                <tbody
                                                  class="ant-table-tbody"
                                                >
                                                  <tr
                                                    aria-hidden="true"
                                                    class="ant-table-measure-row"
                                                    style="height: 0px; font-size: 0px;"
                                                  >
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                    <td
                                                      style="padding: 0px; border: 0px; height: 0px;"
                                                    >
                                                      <div
                                                        style="height: 0px; overflow: hidden;"
                                                      >
                                                         
                                                      </div>
                                                    </td>
                                                  </tr>
                                                  <tr
                                                    class="ant-table-row ant-table-row-level-0"
                                                    data-row-key="1"
                                                  >
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      node1
                                                    </td>
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      审核
                                                    </td>
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      default_MySQL1
                                                    </td>
                                                    <td
                                                      class="ant-table-cell"
                                                    >
                                                      <div
                                                        class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                                                      >
                                                        <div
                                                          class="ant-space-item"
                                                        >
                                                          <a
                                                            class="ant-typography"
                                                          >
                                                            查看
                                                          </a>
                                                        </div>
                                                      </div>
                                                    </td>
                                                    <td
                                                      class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                                      style="position: sticky; right: 0px;"
                                                    >
                                                      <div
                                                        class="css-new95e"
                                                      >
                                                        <button
                                                          class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-1uxy5k6"
                                                          type="button"
                                                        >
                                                          <span>
                                                            重置Token
                                                          </span>
                                                        </button>
                                                      </div>
                                                    </td>
                                                  </tr>
                                                </tbody>
                                              </table>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </section>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          data-sentinel="end"
          style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
          tabindex="0"
        />
      </div>
    </section>
  </div>
</body>
`;
